# kash

./: .copier-answers.yml  .env.template  .gitignore  AGENTS.md  Makefile  README.md  conductor.json  development.md  pyproject.toml
.claude/: settings.json
.cursor/rules/: general.mdc  python.mdc
.github/workflows/: ci.yml  publish.yml
.tbd/: config.yml
.tbd/data-sync/issues/: is-01kgvptrypv35cp0hhtynk2bfm.md  is-01kgvptt0rk5bgs2mnpwgsa1qm.md  is-01kgvpttpxztv0yzbxxcz84xp0.md  is-01kgvpwc68q9h7r89vb5ssqyvq.md  is-01kgvpwdrvhnhgzd8amv7cp6ka.md  is-01kgvpwe5f0hmnescfnbhkpdjk.md  is-01kgvpwezcdez0zt4cwjjntp8d.md  is-01kgvpwfdwa43b0vvb6n2bqx6g.md  is-01kgvpwftpekh19a0g2xah3ene.md  is-01kgvpwg7a6fttq500ef133w2z.md  is-01kgvpwgmbakc4bm5tkv82m3ap.md  is-01kgvpwhdfq5z5twmy2vk3ag3p.md  is-01kgvpwhs677v9tmymt2z08sc8.md  is-01kgvpwj58exa836ejak1sambd.md  is-01kgvpwjwxg1h8c6b4fk5xhnpc.md  is-01ktvxhwzznwe0fwm1sttcw9nv.md  is-01ktvxj73ms6e0v6sxqaaeh7f3.md  is-01ktvxj7bbpfshgdncqrzv9txf.md  is-01ktvxj7k6y9q3ndd49s2h72y8.md  is-01ktvxj7v9nmghjpq9ys2pn07g.md  is-01ktvxj874y9tagm7b05yfghnm.md  is-01ktvxj8jsgfd7vqfv1f3wetcg.md  is-01ktvxj8w7mej297cawtdj0ecy.md  is-01ktvxj94da1btmej82ny608nx.md  is-01kxe77t4b98spwxxpded40mpw.md  is-01kxeg3mvjq54sdbhahgp51vx1.md  is-01kxeg4p9g41ewnyz63xsk6q0j.md  is-01kxeg4ps3y9k8zek8k3qyxpg8.md  is-01kxegrz87qzbpk7g2knt6w9hh.md
.tbd/data-sync/mappings/: ids.yml
devtools/: generate_readme.xsh  lint.py  profile_main.py
docs/: CODE_REVIEW_2026-01.md  HANDOFF-kash-docs.md  development.md  publishing.md
src/kash/: __init__.py  errors.py  run.py  shell_main.py
src/kash/action_defs/: __init__.py
src/kash/actions/: __init__.py
src/kash/commands/: __init__.py
src/kash/completions/: completion_scoring.py  completion_types.py  completions.py
src/kash/concepts/: concept_formats.py  embeddings.py  text_similarity.py
src/kash/config/: api_keys.py  colors.py  dotenv_utils.py  env_settings.py  init.py  lazy_imports.py  logger.py  logger_basic.py  logo.txt  server_config.py  settings.py  setup.py  suppress_warnings.py  text_styles.py  warm_slow_imports.py
src/kash/docs/: all_docs.py  load_actions_info.py  load_api_docs.py  load_help_topics.py  load_source_code.py
src/kash/docs_base/: docs_base.py  load_custom_command_info.py  load_faqs.py  load_recipe_snippets.py
src/kash/embeddings/: embeddings.py
src/kash/exec/: __init__.py  action_decorators.py  action_exec.py  action_registry.py  combiners.py  command_exec.py  command_registry.py  fetch_url_items.py  fetch_url_metadata.py  history.py  importing.py  llm_transforms.py  precondition_checks.py  precondition_defs.py  precondition_registry.py  preconditions.py  resolve_args.py  runtime_settings.py  shell_callable_action.py
src/kash/exec_model/: args_model.py  commands_model.py  script_model.py  shell_model.py
src/kash/file_icons/: color_for_format.py
src/kash/file_storage/: file_store.py  item_file_format.py  metadata_dirs.py  mtime_cache.py  persisted_yaml.py  store_cache_warmer.py  store_filenames.py
src/kash/file_tools/: file_ext.py  file_formats.py  file_formats_model.py  file_sort_filter.py  file_walk.py  filename_parsing.py  git_tools.py  ignore_files.py
src/kash/file_utils/: file_ext.py  file_formats_model.py  file_sort_filter.py  file_walk.py  filename_parsing.py
src/kash/help/: assistant.py  assistant_instructions.py  assistant_output.py  command_help.py  docstring_utils.py  function_param_info.py  help_embeddings.py  help_lookups.py  help_pages.py  help_printing.py  help_types.py  recommended_commands.py  tldr_help.py
src/kash/lang_tools/: capitalization.py  inflection.py
src/kash/lang_utils/: capitalization.py
src/kash/llm_tools/: chat_format.py  clean_headings.py  llm_completion.py  llm_messages.py
src/kash/llm_utils/: __init__.py  clean_headings.py  custom_sliding_transforms.py  fuzzy_parsing.py  language_models.py  llm_completion.py  llm_names.py  llms.py
src/kash/local_server/: local_server.py  local_server_commands.py  local_server_routes.py  local_url_formatters.py  port_tools.py
src/kash/mcp/: kash_mcp_cli.py  mcp_cli.py  mcp_main.py  mcp_server_commands.py  mcp_server_routes.py  mcp_server_sse.py  mcp_server_stdio.py
src/kash/media_base/: audio_processing.py  media_cache.py  media_services.py  media_tools.py  speech_transcription.py  timestamp_citations.py  transcription_deepgram.py  transcription_format.py  transcription_settings.py  transcription_whisper.py
src/kash/model/: __init__.py  actions_model.py  assistant_response_model.py  compound_actions_model.py  concept_model.py  exec_model.py  graph_model.py  items_model.py  language_list.py  language_models.py  llm_actions_model.py  media_model.py  operations_model.py  params_model.py  paths_model.py  preconditions_model.py
src/kash/rich_custom/: ansi_cell_len.py  rich_indent.py  rich_markdown_fork.py
src/kash/shell/: shell_main.py  version.py
src/kash/shell_completions/: completion_scoring.py  shell_completions.py
src/kash/shell_output/: kerm_code_utils.py  kerm_codes.py  kmarkdown.py  shell_output.py
src/kash/shell_tools/: exception_printing.py  function_wrapper.py  native_tools.py  terminal_images.py  tool_deps.py
src/kash/shell_ui/: shell_results.py  shell_syntax.py
src/kash/shell_utils/: native_utils.py  shell_function_wrapper.py  sys_tool_deps.py
src/kash/text_formatting/: citations.py  doc_normalization.py  markdown_util.py  speaker_labels.py
tests/: __init__.py  conftest.py  test_run.py
tests/exec/: test_action_exec_integration.py  test_action_registry.py  test_precondition_checks.py  test_resolve_args.py
tests/file_storage/: test_file_store.py  test_item_id_index.py
tests/llm_utils/: test_fuzzy_parsing.py  test_llm_completion.py  test_sliding_transforms.py
tests/media_base/: test_transcription_deepgram.py
tests/model/: test_items.py  test_params.py  test_preconditions.py
tests/shell/: test_completion_scoring.py
tests/web_content/: test_local_file_cache_integration.py  test_web_fetch_integration.py
tests/workspaces/: test_param_state.py  test_selections.py
(+265 files in other folders)
